CSS fix to make it slightly more readable on mobile

--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@ body {
 	background-color: #010b3d;
 	color: white;
 	display: grid;
-	grid-template-columns: 10% 1fr 
+	grid-template-columns: 15% 1fr 
 }
 
 /* sidebar */
@@ -16,7 +16,8 @@ body {
 }
 
 .sidebar-item {
-	padding-bottom: .75rem;
+	padding-bottom: 1.75rem;
+	font-size: 1.5rem;
 }
 
 .active {
